--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
 	},
 	"plugins": ["@typescript-eslint", "react", "react-hooks", "prettier"],
 	"extends": [
+		"next/core-web-vitals",
 		"eslint:recommended",
 		"plugin:@typescript-eslint/recommended",
 		"plugin:react/recommended",
