--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
           cache: "npm"
 
       - name: Install
-        run: npm
+        run: npm install
 
       - name: Lint
         run: npm run lint
