--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next-i18n-router": "^5.4.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^14.1.2"
+    "react-i18next": "^14.1.2",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/i18next": "^13.0.0",
