--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "i18next": "^23.11.5",
     "i18next-resources-to-backend": "^1.2.1",
+    "lucide-react": "^0.396.0",
     "next": "14.2.3",
     "next-i18n-router": "^5.4.3",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.1.2",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/i18next": "^13.0.0",
