--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "eslint . --ext .js,.jsx,.ts,.tsx"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.9.0",
 		"@radix-ui/react-avatar": "^1.1.0",
 		"@radix-ui/react-checkbox": "^1.1.0",
 		"@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -20,18 +21,20 @@
 		"clsx": "^2.1.1",
 		"i18next": "^23.11.5",
 		"i18next-resources-to-backend": "^1.2.1",
+		"input-otp": "^1.2.4",
 		"lucide-react": "^0.396.0",
 		"next": "14.2.3",
 		"next-i18n-router": "^5.4.3",
 		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-dom": "^18",
-		"react-hook-form": "^7.52.0",
+		"react-hook-form": "^7.52.1",
 		"react-i18next": "^14.1.2",
 		"react-toastify": "^10.0.5",
 		"socket.io-client": "^4.7.5",
 		"tailwind-merge": "^2.3.0",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@types/i18next": "^13.0.0",
