--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# NEXT_PUBLIC_NODE_SKIPTA_BACKEND_URL = https://skipta-pos-backend.onrender.com/api
-NEXT_PUBLIC_NODE_SKIPTA_BACKEND_URL = http://localhost:5500/api
+NEXT_PUBLIC_NODE_SKIPTA_BACKEND_URL = https://skipta-pos-backend.onrender.com/api
+# NEXT_PUBLIC_NODE_SKIPTA_BACKEND_URL = http://localhost:5500/api
