--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-dropzone": "^14.2.3",
 		"react-hook-form": "^7.52.1",
 		"react-i18next": "^14.1.2",
 		"react-toastify": "^10.0.5",
