--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-toast": "^1.2.1",
+		"@uploadthing/react": "^7.0.2",
 		"class-variance-authority": "^0.7.0",
 		"classnames": "^2.5.1",
 		"clsx": "^2.1.1",
@@ -36,6 +37,7 @@
 		"socket.io-client": "^4.7.5",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
+		"uploadthing": "^7.0.2",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
